--- a/PUG_Exercise/views/list.pug
+++ b/PUG_Exercise/views/list.pug
@@ -1,32 +1,17 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-    <link href="list.css" rel="stylesheet" />
-  </head>
-  <body>
-    <h3>Songs on The Beatles - Sgt. Pepper's Lonely Hearts Club Band (1967)</h3>
-    <div>
-      <input type="text" />
-      <button type="submit">Add Song</button>
-      <ul>
-        <li>Sgt. Peppers Lonely Hearts Club Band</li>
-        <li>With a Little Help from My Friends</li>
-        <li>Lucy in the Sky with Diamonds</li>
-        <li>Getting Better</li>
-        <li>Fixing a Hole</li>
-        <li>Shes Leaving Home</li>
-        <li>Being for the Benefit of Mr. Kite!</li>
-        <li>Within You Without You</li>
-        <li>When Im Sixty-Four</li>
-        <li>Lovely Rita</li>
-        <li>Good Morning Good Morning</li>
-        <li>Sgt. Peppers Lonely Hearts Club Band (Reprise)</li>
-        <li>A Day in the Life</li>
-      </ul>
-    </div>
-  </body>
-</html>
+doctype html
+html(lang='en')
+  head
+    meta(charset='UTF-8')
+    meta(http-equiv='X-UA-Compatible', content='IE=edge')
+    meta(name='viewport', content='width=device-width, initial-scale=1.0')
+    title Document
+    link(href='list.css', rel='stylesheet')
+  body
+    h3 Songs on The Beatles - Sgt. Pepper&apos;s Lonely Hearts Club Band (1967)
+    div
+      form(action='/', method='post')
+        input(type='text' name="songTitle")
+        button(type='submit') Add Song
+      ul
+        each song in songs
+          li= song
